# Offline-.exe-picture-formats

./: .gitignore  CMakeLists.txt  README.md  build.ps1
app/: App.xaml  App.xaml.cs  ImgConvert.csproj  MainWindow.xaml  MainWindow.xaml.cs
app/Converters/: Converters.cs
app/Models/: ConversionItem.cs
app/Services/: ConversionService.cs  NativeBridge.cs
app/ViewModels/: MainViewModel.cs
docs/: BUILD.md
native/: CMakeLists.txt  vcpkg.json
native/include/: img_convert.h
native/src/: codec_heif.cpp  codec_jpg.cpp  codec_png.cpp  codec_tiff.cpp  codec_webp.cpp  image.cpp  image.h  img_convert.cpp
src/: ConversionJob.cpp  ConversionJob.h  Format.cpp  Format.h  WicImageConverter.cpp  WicImageConverter.h  main_win32.cpp  smoke_main.cpp
tests/: core_tests.cpp
